noinst_PROGRAMS = appserver feedtest counter sockserv memtest loghup complexity streamparser object threadq threadserv
feedtest_SOURCES = feedtest.cpp
feedtest_LDFLAGS = -lopenframe -L../src

appserver_SOURCES = appserver.cpp
appserver_LDFLAGS = -lopenframe -L../src

streamparser_SOURCES = streamparser.cpp
streamparser_LDFLAGS = -lopenframe -L../src

object_SOURCES = object.cpp
object_LDFLAGS = -lopenframe -L../src

complexity_SOURCES = complexity.cpp
complexity_LDFLAGS = -lopenframe -L../src

threadq_SOURCES = threadq.cpp
threadq_LDFLAGS = -lopenframe -L../src

counter_SOURCES = counter.cpp
counter_LDFLAGS = -lopenframe -L../src

sockserv_SOURCES = socketserver.cpp
sockserv_LDFLAGS = -lopenframe -L../src

memtest_SOURCES = memtest.cpp
memtest_LDFLAGS = -lopenframe -L../src

loghup_SOURCES = loghup.cpp
loghup_LDFLAGS = -lopenframe -L../src

threadserv_SOURCES = threadserv.cpp
threadserv_LDFLAGS = -lopenframe -L../src
